--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -6,7 +6,7 @@
 :sectnums:
 :imagesDir: images
 :stylesDir: stylesheets
-:stylesheet: fedora.css
+:stylesheet: asciidoctor.css
 :xrefstyle: full
 :experimental:
 ifdef::env-github[]
